Fix picture alignment

--- a/css/main.css
+++ b/css/main.css
@@ -591,7 +591,7 @@ textarea, label {
   display: flex;
 }
 .about-author .author-thumb {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0);
   border: 5px solid #1e2530;
   margin-right: 30px;
   padding: 5px;
